--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/reset.css">
   <link href="https://fonts.googleapis.com/css?family=Sawarabi+Gothic" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
@@ -12,15 +13,164 @@
   <div id="wrapper">
     <div class="header">
       <div class="top_page">
-	<a href="/">T</a>
+	<a href="file:///Users/minami/Desktop/portfolio/index.html">M</a>
       </div>
       <div class="humberger_wrap">
-	<div class="humberger"></div>
-	<ul></ul>
+	<div class="humberger">
+	  <span class="hum_1"></span>
+	  <span class="hum_2"></span>
+	  <span class="hum_3"></span>
+	</div>
+	<ul class="sns">
+	  <li>
+	    <a href="https://mobile.twitter.com/miiiina1110">
+	      <i class="fab fa-twitter"></i>
+	    </a>
+	  </li>
+	  <li>
+	    <a href="https://www.instagram.com/cam777___/">
+	      <i class="fab fa-instagram"></i>
+	    </a>
+	  </li>
+	  <li>
+	    <a href="https://lovegraph.me/photographers/miiiina" class="hover">
+	      LOVEGRAPH
+	    </a>
+	  </li>
+	</ul>
       </div>
 <!--header-->
     </div>
+    <div id="main">
+      <div class="main_top">
+	<div class="top_bg">
+	  <div class="top_ttl">
+	    <h1>MINAMI TANOMURA</h1>
+	  </div>
+	</div>
+      </div>
+      <div class="about">
+	<p class="inview">About</p>
+	<div class="about_dtl inview">
+	  <ruby>
+	    <rb>田之村　美波</rb>
+	    <rp>(</rp>
+	    <rt>たのむら　みなみ</rt>
+	    <rp>)</rp>
+	  </ruby> 
+	  <p>
+	    1996年 兵庫県神戸市出身､都内在住。
+	  </p>
+	  <p>
+	    東京YMCA国際ホテル専門学校卒業後､都内の3つ星ホテルに就職｡
+	  </p>
+	  <p>
+	   2019年に国家資格である､HRS(レストランサービス技能士)2級取得｡
+	  </p>
+	  <p>
+	    趣味の1つである、カメラを本格的にやり始め、株式会社ラブグラフのカメラマンとして活動を始める。
+	  </p>
+	</div>
+	<div class="about_dtl inview">
+	  <div class="camera">使用機材</div>
+	  <p>
+	    メインカメラ:Canon EOS 6D mark Ⅱ
+	  </p>
+	  <p>
+	    サブカメラ:RICOH GR2
+	  </p>
+	  <p>
+	    レンズ:35mm,50mm,135mm
+	  </p>
+	  <div class="photo">
+	    <img src="pic/cameraman.png" class="cameraman_img">
+	  </div>
+	</div>
+      </div>
+      <div class="works">
+	<p class="works_ttl inview">Works</p>
+	<div class=" flex inview">
+	  <div class="page">
+	    <a href="file:///Users/minami/Desktop/portfolio/portrate.html">
+	      <img src="pic/IMG_9675.jpg" class="page_img">
+	      <div class="mask">
+	        <div class="caption">Portrate</div>
+	      </div>
+	    </a>
+	  </div>
+	  <div class="page">
+	    <a href="file:///Users/minami/Desktop/portfolio/wedding.html">
+	      <img src="pic/wedding.jpg" class="page_img">
+	      <div class="mask">
+	        <div class="caption">Wedding</div>
+	      </div>
+	    </a>
+	  </div>
+	  <div class="page">
+	    <a href="file:///Users/minami/Desktop/portfolio/couple.html">
+	      <img src="pic/couple.jpg" class="page_img">
+	      <div class="mask">
+	        <div class="caption">Couple</div>
+	      </div>
+	    </a>
+	  </div>
+	</div>
+	<div class="flex inview">
+	  <div class="page">
+	    <a href="file:///Users/minami/Desktop/portfolio/friends.html">
+	      <img src="pic/friends.jpg" class="page_img">
+	      <div class="mask">
+	        <div class="caption">Friends</div>
+	      </div>
+	    </a>
+	  </div>
+	  <div class="page">
+	    <a href="file:///Users/minami/Desktop/portfolio/graduate.html">
+	      <img src="pic/graduate.jpg" class="page_img">
+	      <div class="mask">
+	        <div class="caption">Graguate</div>
+	      </div>
+	    </a>
+	  </div>
+	  <div class="page">
+	    <a href="file:///Users/minami/Desktop/portfolio/trip.html">
+	      <img src="pic/trip.jpg" class="page_img">
+	      <div class="mask">
+	        <div class="caption">Trip</div>
+	      </div>
+	    </a>
+	  </div>
+	</div>
+      </div>
+<!--main-->
+    </div>
+    <footer>
+      <div id="footer">
+	<ul>
+	  <li class="footer_sns">
+	    <a href="https://mobile.twitter.com/miiiina1110">
+	      <i class="fab fa-twitter"></i>
+	  </li>
+	  <li class="footer_sns">
+	    <a href="https://www.instagram.com/cam777___/">
+	      <i class="fab fa-instagram"></i>
+	    </a>
+	  </li>
+	  <li class="footer_sns">
+	    <a href="https://lovegraph.me/photographers/miiiina" class="hover">
+	      LOVEGRAPH
+	    </a>
+	  </li>
+	  <li class="footer_sns">
+	    <a href="https://lovegraph.me/photographers/miiiina" class="hover">
+	      Contact
+	    </a>
+	  </li>
+	</ul>
+      </div>
+    </footer>
 <!--wrapper-->
   </div>
+  <script src="js/myjs.js"></script>
 </body>
 </html>
