--- a/graduate.html
+++ b/graduate.html
@@ -13,29 +13,29 @@
     <div class="header">
       <ul class="header_page">
 	<li>
-	  <a href="file:///Users/minami/Desktop/portfolio/portrate.html">Portrate</a>
+	  <a href="portrate.html">Portrate</a>
 	</li>
 	<li>
-	  <a href="file:///Users/minami/Desktop/portfolio/wedding.html">Wedding</a>
+	  <a href="wedding.html">Wedding</a>
 	</li>
 	<li>
-	  <a href="file:///Users/minami/Desktop/portfolio/couple.html">Couple</a>
+	  <a href="couple.html">Couple</a>
 	</li>
 	<li>
-	  <a href="file:///Users/minami/Desktop/portfolio/friends.html">Friends</a>
+	  <a href="friends.html">Friends</a>
 	</li>
 	<li>
 	  <b>Graduate</b>
 	</li>
 	<li>
-	  <a href="file:///Users/minami/Desktop/portfolio/trip.html">Trip</a>
+	  <a href="trip.html">Trip</a>
 	</li>
       </ul>
       <div class="name">
 	<span>MINAMI TANOMURA</span>
       </div>
       <div class="top_page">
-        <a href="file:///Users/minami/Desktop/portfolio/index.html">M</a>
+        <a href="index.html">M</a>
       </div>
 <!--header-->
     </div>
