--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div id="wrapper">
     <div class="header">
       <div class="top_page">
-	<a href="file:///Users/minami/Desktop/portfolio/index.html">M</a>
+	<a href="index.html">M</a>
       </div>
       <div class="humberger_wrap">
 	<div class="humberger">
@@ -91,7 +91,7 @@
 	<p class="works_ttl inview">Works</p>
 	<div class=" flex inview">
 	  <div class="page">
-	    <a href="file:///Users/minami/Desktop/portfolio/portrate.html">
+	    <a href="portrate.html">
 	      <img src="pic/IMG_9675.jpg" class="page_img">
 	      <div class="mask">
 	        <div class="caption">Portrate</div>
@@ -99,7 +99,7 @@
 	    </a>
 	  </div>
 	  <div class="page">
-	    <a href="file:///Users/minami/Desktop/portfolio/wedding.html">
+	    <a href="wedding.html">
 	      <img src="pic/wedding.jpg" class="page_img">
 	      <div class="mask">
 	        <div class="caption">Wedding</div>
@@ -107,7 +107,7 @@
 	    </a>
 	  </div>
 	  <div class="page">
-	    <a href="file:///Users/minami/Desktop/portfolio/couple.html">
+	    <a href="couple.html">
 	      <img src="pic/couple.jpg" class="page_img">
 	      <div class="mask">
 	        <div class="caption">Couple</div>
@@ -117,7 +117,7 @@
 	</div>
 	<div class="flex inview">
 	  <div class="page">
-	    <a href="file:///Users/minami/Desktop/portfolio/friends.html">
+	    <a href="friends.html">
 	      <img src="pic/friends.jpg" class="page_img">
 	      <div class="mask">
 	        <div class="caption">Friends</div>
@@ -125,7 +125,7 @@
 	    </a>
 	  </div>
 	  <div class="page">
-	    <a href="file:///Users/minami/Desktop/portfolio/graduate.html">
+	    <a href="graduate.html">
 	      <img src="pic/graduate.jpg" class="page_img">
 	      <div class="mask">
 	        <div class="caption">Graguate</div>
@@ -133,7 +133,7 @@
 	    </a>
 	  </div>
 	  <div class="page">
-	    <a href="file:///Users/minami/Desktop/portfolio/trip.html">
+	    <a href="trip.html">
 	      <img src="pic/trip.jpg" class="page_img">
 	      <div class="mask">
 	        <div class="caption">Trip</div>
