--- a/portrate.html
+++ b/portrate.html
@@ -17,26 +17,26 @@
 	  <b>Portrate</b>
 	</li>
 	<li>
-	  <a href="file:///Users/minami/Desktop/portfolio/wedding.html">Wedding</a>
+	  <a href="wedding.html">Wedding</a>
 	</li>
 	<li>
-	  <a href="file:///Users/minami/Desktop/portfolio/couple.html">Couple</a>
+	  <a href="couple.html">Couple</a>
 	</li>
 	<li>
-	  <a href="file:///Users/minami/Desktop/portfolio/friends.html">Friends</a>
+	  <a href="friends.html">Friends</a>
 	</li>
 	<li>
-	  <a href="file:///Users/minami/Desktop/portfolio/graduate.html">Graduate</a>
+	  <a href="graduate.html">Graduate</a>
 	</li>
 	<li>
-	  <a href="file:///Users/minami/Desktop/portfolio/trip.html">Trip</a>
+	  <a href="trip.html">Trip</a>
 	</li>
       </ul>
       <div class="name">
 	<span>MINAMI TANOMURA</span>
       </div>
       <div class="top_page">
-        <a href="file:///Users/minami/Desktop/portfolio/index.html">M</a>
+        <a href="index.html">M</a>
       </div>
 <!--header-->
     </div>
