--- a/trip.html
+++ b/trip.html
@@ -14,19 +14,19 @@
     <div class="header">
       <ul class="header_page">
 	<li>
-	  <a href="file:///Users/minami/Desktop/portfolio/portrate.html">Portrate</a>
+	  <a href="portrate.html">Portrate</a>
 	</li>
 	<li>
-	  <a href="file:///Users/minami/Desktop/portfolio/wedding.html">Wedding</a>
+	  <a href="wedding.html">Wedding</a>
 	</li>
 	<li>
-	  <a href="file:///Users/minami/Desktop/portfolio/couple.html">Couple</a>
+	  <a href="couple.html">Couple</a>
 	</li>
 	<li>
-	  <a href="file:///Users/minami/Desktop/portfolio/friends.html">Friends</a>
+	  <a href="friends.html">Friends</a>
 	</li>
 	<li>
-	  <a href="file:///Users/minami/Desktop/portfolio/graduate.html">Graduate</a>
+	  <a href="graduate.html">Graduate</a>
 	</li>
 	<li>
 	  <b>Trip</b>
@@ -36,7 +36,7 @@
 	<span>MINAMI TANOMURA</span>
       </div>
       <div class="top_page">
-        <a href="file:///Users/minami/Desktop/portfolio/index.html">M</a>
+        <a href="index.html">M</a>
       </div>
 <!--header-->
     </div>
