--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <meta name=“description” content=“田之村美波のポートフォリオサイト”>
-  <meta name=“keywords” content=“田之村美波,tanomuraminami,たのむらみなみ">
+  <meta name=“description” content=田之村美波のポートフォリオサイト>
+  <meta name=“keywords” content=田之村美波,tanomuraminami,たのむらみなみ>
 </head>
 <body>
   <div id="wrapper">
@@ -52,7 +52,7 @@
 	</div>
       </div>
       <div class="about">
-	<p class="inview">About</p>
+	<section class="inview">About</section>
 	<div class="about_dtl inview">
 	  <ruby>
 	    <rb>田之村　美波</rb>
@@ -90,7 +90,7 @@
 	</div>
       </div>
       <div class="works">
-	<p class="works_ttl inview">Works</p>
+	<section class="works_ttl inview">Works</section>
 	<div class=" flex inview">
 	  <div class="page">
 	    <a href="portrate.html">
